--- a/public/Books/vue-books/0.vue-basic/0.vue-basic.md
+++ b/public/Books/vue-books/0.vue-basic/0.vue-basic.md
@@ -11,9 +11,21 @@
 * [vue-devtools](https://github.com/vuejs/vue-devtools)
 
 
-#### 简介
-* 渐进式 JavaScript 框架
-* Vue (读音 /vjuː/，类似于 view) 是一套用于构建用户界面的渐进式框架。与其它大型框架不同的是，Vue 被设计为可以自底向上逐层应用。
-* Vue 的核心库只关注视图层，不仅易于上手，还便于与第三方库或既有项目整合。另一方面，当与现代化的工具链以及各种支持类库结合使用时，
-* Vue 也完全能够为复杂的单页应用提供驱动。
+#### Vue是什么
+* 一个渐进式 JavaScript 框架(可以通过它逐步地、慢慢地拓展你的业务)；
+* 能为一个复杂的单面应用提供驱动（即，你可以在一个页面中使用Vue），也能构建复杂的大型应用（使用Vue-Router/Vuex来构建大型的应用程序）；
+* 
+
+#### MVVM 是什么
+* **Model-View-ViewModel** 是一种软件架构模式 https://zh.wikipedia.org/wiki/MVVM
+* 以往的，旧的开发模式，业务逻辑代码与前端UI界面的耦合非常严重（如jQuery，使用代码层面去操作Dom）
+* 而 **MVVM** 将图形用户界面与业务逻辑分离开来（将`view`视图的状态和行为抽象化），可将 `viewModel` 视图模型看成一个中介者（实际上它也是实现了一个中介者模式）
+* **MVVM**来自于**MVC**模式
+* `Model` 模型。数据对象，数据访问层，内容。
+* `View` 视图。视图结构、外观、布局、UI。
+* `ViewModel` 视图模型。视图模型是视图的数据结构、数据抽象。模型通过自身的改变，再影响到`viewModel`，`viewModel`改变之后，再影响`view`的变化。 
+* 
+
+
+
 
